--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ header {
     align-items: center;
 }
 
-.hero-content a {
+.hero-content a, .button {
     background-color: #FCD900;
     border-radius: 40px;
     color: #34296B;
@@ -123,6 +123,13 @@ header {
     transform: scale(1.05);
     text-decoration: none;
     transition: all ease-in-out .3s;
+}
+
+.buttom_content {
+    font-size: 1.5rem;
+    font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
+    color: #34296B;
 }
 
 @keyframes button {
@@ -158,7 +165,80 @@ header {
     color: #fff
 }
 
+.about {
+    background: #E7E7F3;
+    padding: 3rem 0;
+}
+
+.about h2 {
+    font-size: 3rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    color: #34296B;
+    max-width: 450px;
+}
+
+.video {
+    width: 100%;
+    height: 100%;
+    background-color: #03B962;
+    cursor: pointer;
+}
+
+.video:hover img {
+    transform: scale(.8);
+    transition: .5s ease-in-out all;
+}
+
+.about h4 {
+    background-color: rgba(3, 185, 98, 0.2);
+    border-radius: 10px;
+    padding: 1rem 1.3rem;
+    display: inline-block;
+    /* max-width: 200px; */
+    font-size: .8rem;
+    color: #03B962;
+    margin-top: 22px;
+    margin-bottom: 44px;
+}
+
+.about li img {
+    margin-right: .6rem;
+}
+
+.about ul {
+    list-style: none;
+}
+
+.videoOverlay {
+    display: none;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    right: 0;
+    left: 0;
+    background: rgba(0, 0, 0, .3);
+    justify-content: center;
+    align-items: center;
+}
+
+.videoOverlay.active {
+    display: flex;
+}
+
+video {
+    width: 80%;
+    height: 70%;
+    max-width: 700px;
+    outline: none;
+}
+
 @media screen and (max-width: 768px) {
+    .hero {
+        max-height: 150vh;
+    }
+
     .hero-content h6 {
         font-size: 1rem;
     }
@@ -184,4 +264,31 @@ header {
         width: 100%;
         height: auto;
     }
+
+    .video {
+        height: 250px;
+    }
+
+    .video img {
+        width: 64px;
+        height: auto;
+    }
+
+    .about h2 {
+        font-size: 2rem;
+        margin-top: 1rem;
+    }
+
+    .about h4 {
+        margin-bottom: 22px;
+    }
+
+    a.button {
+        margin-top: 0;
+    }
+
+    .buttom_content {
+        font-size: 1rem;
+    }
 }
+
