--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;900&display=swap');
 
 @font-face {
   font-family: ProximaBold;
@@ -181,7 +181,10 @@ header {
 .video {
     width: 100%;
     height: 100%;
-    background-color: #03B962;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),url('../assets/images/fiwa.JPG');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     cursor: pointer;
 }
 
@@ -190,7 +193,7 @@ header {
     transition: .5s ease-in-out all;
 }
 
-.about h4 {
+.about .product_span {
     background-color: rgba(3, 185, 98, 0.2);
     border-radius: 10px;
     padding: 1rem 1.3rem;
@@ -200,6 +203,15 @@ header {
     color: #03B962;
     margin-top: 22px;
     margin-bottom: 44px;
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+.about h4  {
+    font-size: 1.5rem;
+    font-weight: 900;
+    color: #34296B;
+    margin-bottom: 1rem;
 }
 
 .about li img {
@@ -208,6 +220,13 @@ header {
 
 .about ul {
     list-style: none;
+}
+
+.about li {
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #34296B;
+    line-height: 2.5rem;
 }
 
 .videoOverlay {
@@ -267,6 +286,7 @@ video {
 
     .video {
         height: 250px;
+        background: url('../assets/images/fiwa.JPG');
     }
 
     .video img {
