--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&display=swap');
 
 @font-face {
   font-family: ProximaBold;
@@ -112,7 +112,8 @@ header {
     background-color: #FCD900;
     border-radius: 40px;
     color: #34296B;
-    font-family: ProximaBold, "Helvetica", "Arial", sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
     font-size: 1.5rem;
     padding: 1rem 2.5rem;
     margin-top: 3.875rem;
@@ -127,7 +128,7 @@ header {
 
 .buttom_content {
     font-size: 1.5rem;
-    font-weight: 700;
+    font-weight: 400;
     font-family: 'Montserrat', sans-serif;
     color: #34296B;
 }
