--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,62 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&display=swap');
-
 @font-face {
-  font-family: ProximaBold;
-  src: url('./fonts/Proxima-Nova-Bold.otf'); 
-}
-
-@font-face {
-  font-family: ProximaRegular;
-  src: url('./fonts/ProximaNova-Regular.otf');
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
+    font-family: 'Proxima Nova', sans-serif;
+    src: url("./assets/fonts/ProximaNova-Regular.otf") format("otf");
+    font-weight: 400;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Proxima Nova', sans-serif;
+    src: url("./assets/fonts/ProximaNova-Semibold.otf") format("otf");
+    font-weight: 600;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Proxima Nova', sans-serif;
+    src: url("./assets/fonts/ProximaNova-Bold.otf") format("otf");
+    font-weight: 700;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Proxima Nova', sans-serif;
+    src: url("./assets/fonts/ProximaNova-Black.otf") format("otf");
+    font-weight: 900;
+    font-display: swap;
+  }
+  
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Proxima Nova', sans-serif;
+  }
 
 
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: ProximaRegular, "Helvetica", "Arial", sans-serif;
   overflow-x: hidden;
   width: 100%;
   max-width: 100vw;
   min-height: 100vh;
-  background-color: #34296B;
+  background: #E7E7F3;
 }
 
 /* Hero section */
 .hero {
     width: 100%;
     max-width: 100vw;
-    max-height: 100vh;
+    min-height: 100vh;
+    background: #34296B;
 }
 
 header {
-    margin: 2rem 0;
+    padding: 2rem 0;
+    font-size: 1.3rem;
+    color: #fff;
+    font-weight: 600;
 }
 
 .hero-content {
@@ -64,7 +84,6 @@ header {
 .hero-content h1 {
     font-size: 3rem;
     color: #fff;
-    font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     max-width: 500px;
     margin-bottom: 32px;
@@ -82,8 +101,10 @@ header {
 }
 
 .hero-content p {
-    font-size: 1.25rem;
-    color: #03B962;
+    font-size: 1rem;
+    max-width: 400px;
+    line-height: 1.5;
+    color: #fff;
     margin-bottom: 0;
     animation: paragraph 2s ease-in-out;
 }
@@ -98,11 +119,6 @@ header {
     }
 }
 
-.hero-content p b {
-    font-size: 1.5rem;
-    font-family: ProximaBold, "Helvetica", "Arial", sans-serif;
-}
-
 .smallContent {
     display: flex;
     align-items: center;
@@ -112,7 +128,6 @@ header {
     background-color: #FCD900;
     border-radius: 40px;
     color: #34296B;
-    font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     font-size: 1.5rem;
     padding: 1rem 2.5rem;
@@ -129,7 +144,6 @@ header {
 .buttom_content {
     font-size: 1.5rem;
     font-weight: 400;
-    font-family: 'Montserrat', sans-serif;
     color: #34296B;
 }
 
@@ -160,10 +174,10 @@ header {
 }
 
 .footer_cta a{
-    margin: 2rem 0;
-    font-family: ProximaBold, "Helvetica", "Arial", sans-serif;
+    margin: 3rem 0;
+    margin-top: 4rem;
     font-size: 1.125rem;
-    color: #fff
+    color: #34296B;
 }
 
 .about {
@@ -173,88 +187,329 @@ header {
 
 .about h2 {
     font-size: 3rem;
-    font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     color: #34296B;
-    max-width: 450px;
+    text-align: center;
+    margin: 3rem 0;
 }
 
-.video {
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 1.5rem;
+}
+
+.grid img {
+    grid-row: 1 / span 2;
     width: 100%;
     height: 100%;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),url('../assets/images/fiwa.JPG');
+    object-fit: cover;
+}
+
+.grid .box {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    padding: 91px 31px;
+}
+
+.grid .box.primary {
+    background-color: #34296B;
+}
+
+.grid .box .title {
+    font-size: 1.4rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+    color: #434343;
+}
+
+.grid .box .content {
+    font-size: 1rem;
+    font-weight: 400;
+    color: #434343;
+}
+
+.grid .box.primary .title, .grid .box.primary .content {
+    color: #fff;
+}
+
+.download {
+    width: 100%;
+    height: 140px;
+    background: #34296B;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #fff;
+}
+
+.download:hover {
+    color: #fff;
+}
+
+/* price */
+.price {
+    padding-bottom: 5rem;
+}
+
+.price-wrapper {
+    width: 100%;
+    max-width: 1050px;
+    position: relative;
+    background: #34296B;
+    margin-top: 8rem;
+    padding: 2rem;
+    padding-top: 15rem;
+}
+
+.price-wrapper .price-range {
+    position: absolute;
+    left: 50%;
+    top: -3rem;
+    transform: translateX(-50%);
+    max-width: 684px;
+    width: 100%;
+    background: #fff;
+    border: 8px solid #FCD900;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem 0;
+    flex-direction: column;
+}
+
+.price-wrapper .price-range h5 {
+    font-size: 2rem;
+    color: #34296B;
+    font-weight: 600;
+}
+
+.price-wrapper .price-range .fee {
+    font-size: 3rem;
+    color: #34296B;
+    font-weight: 900;
+    line-height: 1.5;
+}
+
+.price-wrapper h6 {
+    text-align: center;
+    font-size: 1.9rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.price-wrapper .two-grid {
+    max-width: 684px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 0 auto;
+    margin-top: 2.5rem;
+    margin-bottom: 2rem;
+}
+
+.price-wrapper .two-grid .main h1 {
+    text-align: center;
+    color: #fff;
+    font-weight: 900;
+    font-size: 6rem;
+}
+
+.price-wrapper .two-grid .main p {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #fff;
+    text-align: center;
+    line-height: 1.3;
+    max-width: 250px;
+    margin: 0 auto;
+}
+
+/* testimonial */
+.testimonial {
+    width: 100%;
+    padding: 3rem 32px;
+    background: #F8F8F8;
+}
+
+.testimonial h2 {
+    text-align: center;
+    font-size: 3rem;
+    color: #34296B;
+    font-weight: 700;
+    margin-bottom: 2rem;
+}
+
+.testimonial .content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1.5rem;
+}
+
+.testimonial .content .box {
+    background: #fff;
+    padding: 2.3rem 1.9rem;
+}
+
+.testimonial .content .box img {
+    width: 84px;
+    height: 84px;
+    border-radius: 50%;
+}
+
+.testimonial .content .box .name {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #000;
+    margin: 1rem 0;
+}
+
+.testimonial .content .box .text {
+    font-size: 1rem;
+    font-weight: 400;
+    max-width: 500px;
+    line-height: 1.5;
+    color: #161616;
+}
+
+footer {
+    background: #E7E7F3;
+}
+
+footer .button {
+    background: #34296B;
+    color: #fff;
+    text-decoration: none;
+}
+
+footer .button:hover {
+    background: #FCD900;
+    color: #34296B;
+}
+
+/* Register */
+.register {
+    width: 100vw;
+    max-height: 100vw;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.bg {
+    background-image: linear-gradient(to bottom, #34296b4f, #34296b3d),
+        url('../assets/images/basics.jpg');
+    height: 100vh;
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
+}
+
+.box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 0 2rem;
+    padding-top: 2.5rem;
+}
+
+.input-group {
+    max-width: 500px;
+    width: 100%;
+    margin-bottom: 1.5rem;
+}
+
+.input-group label {
+    display: block;
+    font-size: 1rem;
+    font-weight: 400;
+    color: #000;
+}
+
+.input-group input {
+    width: 100%;
+    height: 48px;
+    margin-top: .7rem;
+    border: none;
+    border-radius: 8px;
+    outline: none;
+    padding: 0 .7rem;
+}
+
+.input-group textarea {
+    width: 100%;
+    height: 80px;
+    margin-top: .7rem;
+    border: none;
+    border-radius: 8px;
+    outline: none;
+    padding: .7rem;
+}
+
+form button {
+    border: none;
+    background: #34296B;
+    color: #fff;
+    font-size: 1.25rem;
+    font-weight: 700;
+    padding: .7rem 1.3rem;
+    outline: none;
+    border-radius: 8px;
+}
+
+form button:hover {
+    background: #FCD900;
+    color: #34296B;
     cursor: pointer;
 }
 
-.video:hover img {
-    transform: scale(.8);
-    transition: .5s ease-in-out all;
-}
-
-.about .product_span {
-    background-color: rgba(3, 185, 98, 0.2);
-    border-radius: 10px;
-    padding: 1rem 1.3rem;
-    display: inline-block;
-    /* max-width: 200px; */
-    font-size: .8rem;
-    color: #03B962;
-    margin-top: 22px;
-    margin-bottom: 44px;
-    font-weight: 900;
-    text-transform: uppercase;
-}
-
-.about h4  {
-    font-size: 1.5rem;
-    font-weight: 900;
-    color: #34296B;
-    margin-bottom: 1rem;
-}
-
-.about li img {
-    margin-right: .6rem;
-}
-
-.about ul {
-    list-style: none;
-}
-
-.about li {
-    font-size: 1.5rem;
-    font-weight: 500;
-    color: #34296B;
-    line-height: 2.5rem;
-}
-
-.videoOverlay {
-    display: none;
+.overlay {
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100vw;
     height: 100vh;
-    top: 0;
-    right: 0;
-    left: 0;
-    background: rgba(0, 0, 0, .3);
+    display: flex;
     justify-content: center;
     align-items: center;
+    background: rgba(0, 0, 0, .4);
+    cursor: pointer;
+    display: none;
 }
 
-.videoOverlay.active {
+.overlay.show {
     display: flex;
 }
 
-video {
-    width: 80%;
-    height: 70%;
-    max-width: 700px;
-    outline: none;
+.overlay .content {
+    max-width: 600px;
+    width: 90%;
+    min-height: 300px;
+    background: #34296B;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    font-size: 2rem;
+    color: #fff;
+    text-align: center;
+    font-weight: 600;
+    border-top: 8px solid #FCD900;
 }
 
 @media screen and (max-width: 768px) {
+
+    header {
+        font-size: 1rem;
+    }
+
     .hero {
         max-height: 150vh;
     }
@@ -285,14 +540,6 @@ video {
         height: auto;
     }
 
-    .video {
-        height: 250px;
-    }
-
-    .video img {
-        width: 64px;
-        height: auto;
-    }
 
     .about h2 {
         font-size: 2rem;
@@ -303,6 +550,48 @@ video {
         margin-bottom: 22px;
     }
 
+    .grid {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+    }
+
+    .download {
+        font-size: 1.5rem;
+    }
+
+    .price-wrapper .price-range {
+        max-width: 80vw;
+    }
+
+    .price-wrapper .price-range h5 {
+        font-size: 1rem;
+    }
+
+    .price-wrapper h6 {
+        font-size: 1.5rem;
+    }
+
+    .price-wrapper .two-grid {
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 2.5rem;
+    }
+
+    .price-wrapper .main h1 {
+        font-size: 3rem;
+    }
+
+    .testimonial {
+        padding: 3rem 16px;
+    }
+
+    .testimonial h2 {
+        font-size: 1.5rem;
+    } 
+
+    .testimonial .content {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
     a.button {
         margin-top: 0;
     }
@@ -311,8 +600,20 @@ video {
         font-size: 1rem;
     }
 
-    .about li {
-        font-size: 1rem;
+    .bg {
+        background-image: linear-gradient(to bottom, #34296b4f, #34296b3d),
+        url('../assets/images/basics.jpg');
+        height: 40vh;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+
+    .register {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .box {
+        padding-bottom: 4rem;
     }
 }
-
