--- a/css/style.css
+++ b/css/style.css
@@ -592,6 +592,10 @@ form button:hover {
         grid-template-columns: repeat(1, 1fr);
     }
 
+    .hero-content a, .button { 
+        font-size: 1rem;
+    }
+
     a.button {
         margin-top: 0;
     }
